Fixed spacing between posts

--- a/blog.css
+++ b/blog.css
@@ -3,7 +3,7 @@ body {
 }
 
 .post-panel {
-	margin-top: 13px;
+	margin-top: 7px;
 }
 
 .post-panel > .panel-heading {
